@@ -53,17 +53,24 @@ class HiddenPropertyTest extends AbstractHelper
     {
         $fixture = new ReflectionClass($this);
         $justaName = 'whatever';
-
         $hiddenProperty = new HiddenProperty($fixture, $justaName);
         $this->assertTrue($hiddenProperty->isPublic(), 'Nearly all hidden propeties are public.');
+
 
         $reflectionClassMock = $this->createMock(ReflectionClass::class);
         $reflectionClassMock->expects($this->once())
             ->method('getName')
             ->willReturn(DateTime::class);
-
         $hiddenProperty = new HiddenProperty($reflectionClassMock, $justaName);
         $this->assertFalse($hiddenProperty->isPublic(), 'The DateTime properties are not public.');
+
+
+        $reflectionClassMock = $this->createMock(ReflectionClass::class);
+        $reflectionClassMock->expects($this->once())
+            ->method('getName')
+            ->willReturn(\DateTimeImmutable::class);
+        $hiddenProperty = new HiddenProperty($reflectionClassMock, $justaName);
+        $this->assertFalse($hiddenProperty->isPublic(), 'The DateTimeImmutable properties are not public.');
     }
 
     public function testHasType()
